--- a/views/pages/editClient.ejs
+++ b/views/pages/editClient.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invoice Management App | Clients</title>
+    <title>Invoice Management App | theuicode.com</title>
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -13,7 +13,10 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/sidebars.css" rel="stylesheet">
-    <link href="css/home.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/form.css">
+
+    <script src="js/main.js"></script>
 
 </head>
 
@@ -100,10 +103,10 @@
     </svg>
 
     <!-- Main container for dividing everything up into two columns -->
-    <div class="container-fluid">
+    <div class="container-fluid ">
         <div class="row">
 
-            <!-- Left sidebar menu, will be same for all the pages -->
+            <!-- Left sidebar menu, will be same of rall the pages -->
             <div class="col-sm-3 col-md-2 " style="padding-left: 0; padding-right: 0;">
                 <div class="position-fixed">
                     <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-dark " style="width: 280px;">
@@ -115,33 +118,6 @@
 
                         <hr>
                         <ul class="nav nav-pills flex-column mb-auto">
-                            <!-- <li class="nav-item">
-                                <a href="#" class="nav-link text-white" aria-current="page">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#home" />
-                                    </svg>
-                                    Home
-                                </a>
-                            </li> -->
-
-                            <!-- <li>
-                                <a href="#" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#table" />
-                                    </svg>
-                                    Orders
-                                </a>
-                            </li> -->
-
-                            <!-- <li>
-                                <a href="#" class="nav-link text-white">
-                                    <svg class="bi me-2" width="16" height="16">
-                                        <use xlink:href="#people-circle" />
-                                    </svg>
-                                    Customers
-                                </a>
-                            </li> -->
-
                             <li>
                                 <form method="GET">
                                     <a href="/dashboard" class="nav-link text-white">
@@ -196,147 +172,106 @@
                                     </a>
                                 </form>
                             </li>
-
                         </ul>
                         <hr>
-                        <!-- <div class="dropdown">
-                            <a href="#"
-                                class="d-flex align-items-center text-white text-decoration-none dropdown-toggle "
-                                id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="https://github.com/mdo.png" alt="" width="32" height="32"
-                                    class="rounded-circle me-2">
-                                <strong>mdo</strong>
-                            </a>
-                            <ul class="dropdown-menu dropdown-menu-dark text-small shadow"
-                                aria-labelledby="dropdownUser1">
-                                <li><a class="dropdown-item" href="#">New project...</a></li>
-                                <li><a class="dropdown-item" href="#">Settings</a></li>
-                                <li><a class="dropdown-item" href="#">Profile</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Sign out</a></li>
-                            </ul>
-                        </div> -->
-
                         <form action="/logout" method="post">
                             <button id="logout" class="btn btn-secondary" name="foo" value="Sign Out">Signout</button>
                             <!-- <input type="submit" value="LOGOUT"> -->
                         </form>
-
                     </div>
+
                 </div>
             </div>
 
 
 
+                <%rows.forEach(function(r) {%>
+                    <!-- Main contecnt section, will be different for all the pages -->
+                    <div class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main" style="min-width: 1000px;">
+                        <h1 class="display-1">Edit Clients</h1>
 
-            <!-- Main content section, will be different for all the pages -->
-            <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" style="min-width: 1000px;">
-                <h1 class="display-1">Clients</h1>
+                        <div class="formcontainer">
+                            <form action="/newClient/Added" method="post">
+                            <!-- <form action="/newClient/Added" target="_blank" method="post"> -->
+                                <div class="row g-3 gx-5">
+                                    <div class="col-md-6">
+                                        <h2>Client Information</h2>
+                                        <label for="inputClientName" class="form-label">Client Name (i.e. Company)</label>
+                                        <input type="text" class="form-control" id="inputClientName" name="inClName">
+                                        <br>
+                                        <label for="inputClientID" class="form-label">Client ID</label>
+                                        <input type="text" class="form-control" id="inputClientID" name="inClID">
 
-                <div class="input-group">
-                    <!-- Button for new Clients -->
-                    <!-- <form action="/newClient.html"> -->
-                    <form action="/newClient" method="GET">
-                        <input id="new-button" class="btn btn-secondary" type="submit" value="New" />
-                    </form>
+
+                                    </div>
+                                    <div class="col-md-6">
+                                        <h2>Contact Information</h2>
+                                        <label for="inputContactName" class="form-label">Contact Name</label>
+                                        <input type="text" class="form-control" id="inputContactName" name="inConName" 
+                                        placeholder = "<%= r.clientName%>">
+                                        <br>
+                                        <label for="inputEmail" class="form-label">Email-Address</label>
+                                        <input type="email" class="form-control" id="inputEmail" name="inEmail" 
+                                        placeholder="<%= r.email%>">
+                                        <br>
+                                        <div class="row g-3 gx-5">
+                                            <div class="col-4">
+                                                <label for="inputAreaCode" class="form-label">Area Code</label>
+                                                <input type="text" class="form-control" id="inputAreaCode" name="inAreaCode">
+                                            </div>
+                                            <div class="col-8">
+                                                <label for="inputPhoneNumber" class="form-label">Phone Number</label>
+                                                <input type="tel" class="form-control" id="inputPhoneNumber" name="inPhnNum"
+                                                placeholder="<%= r.phone%> ">
+
+                                            </div>
+                                        </div>
+                                        <br>
+                                        <label for="inlineRadioOptions" class="form-label">Prefered Contact</label>
+                                        <br>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio1" placeholder="Email">
+                                            <label class="form-check-label" for="inlineRadio1">Email</label>
+                                        </div>
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                                id="inlineRadio2" value="Phone">
+                                            <label class="form-check-label" for="inlineRadio2">Phone</label>
+                                        </div>
 
 
-                    <!-- Search Button -->
-                    <div class="form-outline">
-                        <input id="search-input" type="search" placeholder="Search" id="form1" class="form-control" />
-                    </div>         
 
-                    <button id="search-button" type="button" class="btn btn-secondary">
-                        <i class="fas fa-search"></i>
-                    </button>
+                                    </div>
 
-                    <div class ="form-outline">
-                        <form method = "POST" >
-                            <p>Delete Client: <input action = "/deleteClient/:clientID" type = "text" placeholder = "client id"></p>
-                        </form>
-                    </div>  
-                </div>
+                                    <div class="row g-3 gx-5">
+                                        <div class="col-md-12">
+                                            <h2>Billing Address</h2>
+                                            <textarea class="form-control" id="billingAddress" name="inAddr" classname="Text1" cols="40"
+                                                rows="5" placeholder="<%= r.address%>"></textarea>
+                                            <br>
+                                        </div>
 
-                <div class="tablecontainer">
-                    <table class="table">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col">Client ID</th>
-                                <th scope="col">Client Name</th>
-                                <th scope="col">Pending Invoices</th>
-                                <th scope="col">Balance Remaining</th>
-                                <th scope="col">Contact Name</th>
-                                <th scope="col">Contact Email</th>
-                                <th scope="col">Contact Phone</th>
-                                <th scope="col">Actions</th>
-                                <th scope="col">Email Invoice</th>
+                                    </div>
 
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <!-- <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td>@twitter</td>
-                            </tr> -->
+                                    <!-- <form method="POST" action="/newClient/Added"> -->
+                                    <div class="col-12" style="text-align: center;">
+                                        <!-- <form method="POST" action="/newClient/Added"> -->
+                                            <button href = "/client" id="addClient" type="submit" class="btn btn-secondary">Return to ClientBoard</button>
+                                            <form method="post" action ='/deleteclient/<%= r.clientid%>'>
+                                                <button class ="btn btn-secondary">Delete Client</button>
+                                            </form>
+                                        <!-- </form> -->
+                                    </div>
+                                    <!-- </form> -->
 
-                            <% rows.forEach(function(r) { %>
-                                <tr>
-                                    <td>
-                                        <%= r.clientid %>
-                                    </td>
-                                    <td>
-                                        <%= r.clientname %>
-                                    </td>
-                                    <td>&nbsp</td>
-                                    <td>0</td>
-                                    <td>
-                                        <%= r.contactname %>
-                                    </td>
-                                    <td>
-                                        <%= r.email %>
-                                    </td>
-                                    <td>
-                                        <%= r.phone %>
-                                    </td>
-                                    <td>
-                                     
-                                        <a href="/template/<%= r.clientid%>">View End Statements</a>
-                                       
-                                    </td>
-                                    <td>
-                                        <input class="btn btn-secondary" type="submit" value="Send Email">
-                                    </td>
-                                    <td>
-                                        <a href="/viewclient/<%= r.clientid%>" class = "btn btn-secondary">
-                                            view client
-                                        </a>
-                                    </td>
-                                    
-                                </tr>
-                                <% }); %>
-                        </tbody>
-                    </table>
-                </div>
+                                </div>
+
+                            </form>
+                        </div>
+                    </div>
+                <% }); %>
             </div>
-        </div>
     </div>
 
 </body>
-
-</html>
