--- a/views/pages/newPayment.ejs
+++ b/views/pages/newPayment.ejs
@@ -218,7 +218,7 @@
                                     <option hidden disabled selected value> Choose an Invoice </option>
                                     <% rows.forEach(function(r) { %>
                                     <option value="<%= r.invoiceid %>">
-                                        Invoice <%= r.invoiceid %> , Client: <%= r.clientname %> , Remaining: <%= r.balance %>
+                                        Invoice <%= r.invoiceid %> , <%= r.clientname %>
                                     </option>
                                     <% }) %>
                                 </select>
