--- a/views/pages/generatedInvoice.ejs
+++ b/views/pages/generatedInvoice.ejs
@@ -12805,7 +12805,8 @@
     <div class="page-content container">
         <div class="page-header text-blue-d2">
             <h1>
-                <img src="images/logo.png" alt="" width="70" height="70" id="logo">
+                <img src="https://guarded-springs-56328.herokuapp.com/images/logo.png" alt="" width="70" height="70"
+                    id="logo">
                 ByteTools
 
 
